fix: revert and fix <pre> whitespace

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -273,7 +273,7 @@
   }
 
   pre {
-    @apply font-mono whitespace-pre-line;
+    @apply font-mono;
   }
 
   code {
